objects/JBCXM__PickList__c.object
<CustomObject>
    <description>Utility object that stores the configurable look-up values that are used across the application.</description>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field will be used to decided if the picklist value should be displayed in the LookUp values while creating a object.</description>
        <inlineHelpText>Check to activate / Uncheck to deactivate.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionMeasure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to decide to show user adoption or not</description>
        <inlineHelpText>Check to activate / Uncheck to deactivate.</inlineHelpText>
        <label>Adoption Measure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Attribute1__c</fullName>
        <description>This is used to store extra attribute like color value for churn reason,alert severity</description>
        <inlineHelpText>Select display color.</inlineHelpText>
        <label>Attribute1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Attribute2__c</fullName>
        <description>Extra field for feature use.</description>
        <label>Attribute2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Attribute3__c</fullName>
        <description>Extra field for feature use.</description>
        <label>Attribute3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTAType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Type</label>
        <referenceTo>JBCXM__CTATypes__c</referenceTo>
        <relationshipLabel>Picklist by CTA Type</relationshipLabel>
        <relationshipName>PicklistByCTAType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <description>Pre-defined list of categories in the PickLists.</description>
        <inlineHelpText>Pre-defined list of categories in the PickLists.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption Measure Types</fullName>
                </value>
                <value>
                    <fullName>Alert Reason</fullName>
                </value>
                <value>
                    <fullName>Alert Severity</fullName>
                </value>
                <value>
                    <fullName>Alert Status</fullName>
                </value>
                <value>
                    <fullName>Alert Type</fullName>
                </value>
                <value>
                    <fullName>Churn Reason</fullName>
                </value>
                <value>
                    <fullName>Customer Stage</fullName>
                </value>
                <value>
                    <fullName>Customer Status</fullName>
                </value>
                <value>
                    <fullName>Milestones</fullName>
                </value>
                <value>
                    <fullName>Order Type</fullName>
                </value>
                <value>
                    <fullName>Relationship Activity</fullName>
                </value>
                <value>
                    <fullName>SalesRep Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <description>This order will be used while the PickList values are being used as lookup relations while creating other objects.</description>
        <inlineHelpText>The order in which the picklist item should appear in any list interface or drop down selection</inlineHelpText>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;GLOBAL&quot;</defaultValue>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IncludeInWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include the fields in  widgets.</description>
        <inlineHelpText>Check if the field wants to include in widgets.</inlineHelpText>
        <label>Include In Widget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsSCMeasure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scorecard Measure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MapToBookingType__c</fullName>
        <description>This is used to associate the new transaction booking/order type to core types like New Business, Upsell, Downsell, Debook, etc. and this populated for only records of Category &quot;Order Type&quot;.</description>
        <label>Map to Booking Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship Type PickList</relationshipLabel>
        <relationshipName>GSRelationshipTypePickList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Category</label>
        <referenceTo>JBCXM__GSReportCategory__c</referenceTo>
        <relationshipLabel>Picklist</relationshipLabel>
        <relationshipName>GSPicklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ShortName__c</fullName>
        <inlineHelpText>Provide short name for displaying in the widgets and graphs.</inlineHelpText>
        <label>Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubEntityType__c</fullName>
        <label>Sub Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Boolean value to indicate whether the record is system defined.</inlineHelpText>
        <label>System Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <description>Internal name used by the application and in data loads.</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal name used by the application and in data loads.</inlineHelpText>
        <label>System Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__UsageTrackingMeasure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to decide to show usage tracking or not</description>
        <inlineHelpText>Check to activate / Uncheck to deactivate</inlineHelpText>
        <label>Usage Tracking Measure</label>
        <type>Checkbox</type>
    </fields>
    <label>PickList</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__SystemName__c</columns>
        <columns>JBCXM__ShortName__c</columns>
        <columns>JBCXM__IncludeInWidget__c</columns>
        <columns>JBCXM__Category__c</columns>
        <columns>JBCXM__Attribute1__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__Active__c</columns>
        <columns>JBCXM__AdoptionMeasure__c</columns>
        <columns>JBCXM__UsageTrackingMeasure__c</columns>
        <columns>JBCXM__SystemDefined__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PickList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PickList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>